--- a/Meta.html
+++ b/Meta.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Budweiser Experiences</title>
+    <title>Corona Sunsets</title>
     <style>
         html{
             height: 100%;
